singleProductBox: fix alignment

--- a/src/scss/partials/common/_singleProductBox.scss
+++ b/src/scss/partials/common/_singleProductBox.scss
@@ -66,7 +66,7 @@
 		}
 
 		.rating {
-			margin: 0.5rem 0 0.9rem 0;
+			margin: 0.5rem 0 0.8rem 0;
 			width: 3.2rem;
 			// padding: 0.05rem 0.35rem;
 			padding: 0.1rem;
@@ -99,7 +99,7 @@
 			align-items: flex-start;
 			font-weight: 500;
 			color: #535353;
-			margin-bottom: 0.1rem;
+			margin-bottom: 0rem;
 
 			.ldc {
 				margin-top: -0.7rem;
